--- a/public/HTML/login.html
+++ b/public/HTML/login.html
@@ -21,7 +21,10 @@
     body, html {
         height: 100%;
         background-repeat: no-repeat;
-        /*background-color: #d3d3d3;*/
+        background-size: cover;
+        background-image: url("../image/login.jpg");
+        WIDTH: 100%;
+        HEIGHT: 100%;
         font-family: 'Oxygen', sans-serif;
     }
 
