--- a/public/administrator/personnel_management.html
+++ b/public/administrator/personnel_management.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <!--<link rel="stylesheet" href="css/font-awesome.min.css">-->
     <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
     <title>personnel management</title>
 </head>
