--- a/public/teacher/teacher_home.html
+++ b/public/teacher/teacher_home.html
@@ -12,7 +12,9 @@
 <style>
     body {
         font-family: 'lato' !important;
-        background-color: white;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-image: url('../image/teacher.jpg');
     }
 
     /*navbar start*/
@@ -393,7 +395,7 @@
                 </button>
                 <div class="container">
                     <div class="row">
-                        <div class="col-sm-7">
+                        <div class="col-sm-12">
                             <hr/>
                             <div class="review-block" id="courses">
 
